<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item android:id="@+id/user_manual"
            android:icon="@drawable/ic_user_manual"
            android:title="@string/user_manual"
            />
        <item android:id="@+id/rate"
            android:icon="@drawable/ic_star"
            android:title="@string/vote_app"
            />
        <item android:id="@+id/feedback"
            android:icon="@drawable/ic_baseline_mail_24"
            android:title="@string/feedback"
            />
        <item android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            />
        <item android:id="@+id/app_others"
            android:icon="@drawable/ic_others_app"
            android:title="@string/other_app"
            />
    </group>



</menu>