<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
   >

    <include layout="@layout/toolbar_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/cst_background"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_20sdp">

            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:text="@string/user_manual_note1"
                android:textColor="#112233"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/user_manual_note1"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/user_manual_note2"
                android:textColor="#112233"
                android:textSize="@dimen/_13ssp"
              />
            <TextView
                android:id="@+id/user_manual_note2"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/user_manual_note3"
                android:textColor="#112233"
                android:textSize="@dimen/_13ssp"
               />
            <TextView
                android:id="@+id/user_manual_note3"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/user_manual_note4"
                android:textColor="#112233"
                android:textSize="@dimen/_13ssp"
              />
            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:id="@+id/user_manual_bt"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/cst_bt_close"
                android:padding="@dimen/_10sdp"
                android:text="Bắt đầu sử dụng"
                android:textColor="#ffffff"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>